met de zweedse kik

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="mattentaart.html">Mattentaart</a></li>
 		</ul>
 	</nav>
-    <footer><small>copyright</small></footer>
+    <footer><small>&copy; Copyright Git oefening</small></footer>
     
 </body>
 </html>
